# traductor

./: .gitmodules  CMakeLists.txt
src/: main.cpp  playAudio.cpp
